--- a/yes.html
+++ b/yes.html
@@ -24,6 +24,9 @@
         AYAYYAYAYYAYAYAYAYAYAYYAYAYYAYYAYAYAYYAYAYYAYAYAYAYAYAYYAYAYYAYYAYAYAYYAYAYYAYAYAY
         AYAYAYYAYAYYAYYAYAYAYYAYAYYAYAYAYA
     </h1>
+         <audio autoplay loop>
+            <source src="Yippee Sound Effect.mp3" type="audio/mpeg">
+        </audio>
     <img src="giphy.gif" class="fullscreen-image">
 </body>
 </html>
