--- a/no.html
+++ b/no.html
@@ -21,5 +21,9 @@
     💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔
     💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔</h1>
     <img src="no.gif" class="fullscreen-image">
+         <audio autoplay loop>
+            <source src="Roblox crying - Sound Effect.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
 </body>
 </html>
